fixed spacing events

--- a/css/spaces.css
+++ b/css/spaces.css
@@ -27,6 +27,7 @@
   justify-content: center;
   margin: auto;
   width: 100%;
+  padding-bottom: 40px;
 }
 
 .exhibitions-top {
